# TimetableBot

./: CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
src/API/: ScheduleAPI.cpp  ScheduleAPI.h
src/Types/: Lesson.cpp  Lesson.h  ScheduleDay.cpp  ScheduleDay.h  Teacher.cpp  Teacher.h
